--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/three": "^0.160.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.34.3",
+    "lucide-react": "^0.575.0",
     "next": "^14.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
