--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-three/fiber": "^8.17.12",
     "@types/three": "^0.160.0",
     "clsx": "^2.1.1",
+    "firebase": "^11.10.0",
+    "firebase-admin": "^12.7.0",
     "framer-motion": "^12.34.3",
     "next": "^14.2.0",
     "react": "^18.3.1",
